src/test/AmbiguousCall2/AmbiguousCall2.expected
error: AmbiguousCall2.panda:10:9: call to 'ambiguous' with parameters (panda.core.Int8, panda.core.Int8) is ambiguous. The following methods are all equally good matches:
    method ambiguous(r:panda.core.Real64, i:panda.core.Int32) (AmbiguousCall2.panda:6:5)
    method ambiguous(i:panda.core.Int32, r:panda.core.Real64) (AmbiguousCall2.panda:2:5)
1 error
